<resources>
  <string name="app_name">Its Here</string>

  <string name="permission_rationale_location_1">To show your current location, allow Its Here permission to access your location.</string>
  <string name="permission_rationale_location_2">To make your device trackable, allow Its Here permission to access your location.</string>
  <string name="permission_rationale_settings">Settings</string>

  <string name="search_hint">Search</string>
  <string name="search_menu_desc">Open menu</string>
  <string name="search_voice_desc">Search by voice</string>

  <string name="main_track_desc">Track device</string>
  <string name="main_location_desc">Make device trackable</string>

  <string name="login_title">Log in to Its Here</string>
  <string name="login_body">Start broadcasting your location to start tracking your device.</string>
  <string name="login_google">Sign in with Google</string>
  <string name="login_cancel">Cancel</string>
</resources>
